Fix size of select box so text is not cut off on the button.

--- a/views/admin/css/avantvocabulary.css
+++ b/views/admin/css/avantvocabulary.css
@@ -21,6 +21,7 @@
     margin-bottom: 0px;
     margin-right: 3px;
     width:46%;
+    padding: 2px 2px 4px 2px;
 }
 
 #add-vocabulary-term-button {
